traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:24: error: ';' expected but '(' found.
      case Direction.OUEST => droite();avance():droite();
                                                      ^